<resources>
    <string name="app_name">Alarm Maps</string>
    <string name="set_new_alarm">Set new alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="take_place_button_text">TAKE THIS PLACE</string>
    <string name="route_to_user_location">Route to user location</string>
    <string name="pin_image_for_map">Pin image for map</string>
    <string name="et_name">Name</string>
    <string name="et_radius">Radius</string>
    <string name="cancel">Cancel</string>
    <string name="new_alarm">NEW ALARM</string>
    <string name="background_location_permission_title">Allow to access this device\'s location?</string>
    <string name="background_location_permission_message">For the correct app work it is necessary to allow getting location access  all the time in the settings</string>
    <string name="settings">SETTINGS</string>
</resources>