<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.AlarmMapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mapPin"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:src="@drawable/map_pin"
            android:elevation="16dp"
            android:contentDescription="@string/pin_image_for_map"/>

    </com.yandex.mapkit.mapview.MapView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_location_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorNull"
        app:elevation="8dp"
        android:contentDescription="@string/route_to_user_location"
        app:srcCompat="@drawable/ic_location_disabled_black_24dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/take_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/take_place_button_text"
        android:textAlignment="center"
        android:layout_margin="48dp"
        android:elevation="8dp" />



</FrameLayout>